# src/main/java/com/sunsetbeach/api/RoomUnitsApi.java
@@ -120,7 +120,7 @@ public interface RoomUnitsApi {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"affectedBookings\" : [ { \"checkIn\" : \"checkIn\", \"checkOut\" : \"checkOut\", \"bookingId\" : \"bookingId\", \"guestName\" : \"guestName\", \"status\" : \"NEW\" }, { \"checkIn\" : \"checkIn\", \"checkOut\" : \"checkOut\", \"bookingId\" : \"bookingId\", \"guestName\" : \"guestName\", \"status\" : \"NEW\" } ], \"warning\" : \"warning\", \"block\" : { \"fromDate\" : \"fromDate\", \"reason\" : \"reason\", \"createdAt\" : \"2000-01-23T04:56:07.000+00:00\", \"toDate\" : \"toDate\", \"id\" : \"id\", \"roomUnitId\" : \"roomUnitId\" } }";
+                    String exampleString = "{ \"affectedBookings\" : [ { \"checkIn\" : \"checkIn\", \"checkOut\" : \"checkOut\", \"bookingId\" : \"bookingId\", \"guestName\" : \"guestName\", \"status\" : \"NEW\" }, { \"checkIn\" : \"checkIn\", \"checkOut\" : \"checkOut\", \"bookingId\" : \"bookingId\", \"guestName\" : \"guestName\", \"status\" : \"NEW\" } ], \"warning\" : \"warning\", \"block\" : { \"fromDate\" : \"fromDate\", \"reason\" : \"reason\", \"createdAt\" : \"2000-01-23T04:56:07.000+00:00\", \"toDate\" : \"toDate\", \"id\" : \"id\", \"roomUnitId\" : \"roomUnitId\" }, \"affectedUnassignedBookings\" : [ { \"checkIn\" : \"checkIn\", \"checkOut\" : \"checkOut\", \"bookingId\" : \"bookingId\", \"guestName\" : \"guestName\", \"status\" : \"NEW\" }, { \"checkIn\" : \"checkIn\", \"checkOut\" : \"checkOut\", \"bookingId\" : \"bookingId\", \"guestName\" : \"guestName\", \"status\" : \"NEW\" } ] }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
